# TextHumanize

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  STRATEGY_HUMANIZATION.md  _trace_tone.py  composer.json  mkdocs.yml  package.json  pyproject.toml  test_impl.py  test_quality.py
.github/workflows/: ci.yml  publish.yml  quality-gate.yml
benchmarks/: detector_benchmark.py  full_benchmark.py  quality_bench.py  run_benchmark.py
docs/: API_REFERENCE.md  ASH_EVALUATION.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_ANALYSIS_2026.md  COMPETITIVE_ANALYSIS_v2.md  COMPETITIVE_ANALYSIS_v3.md  COMPETITIVE_ANALYSIS_v4_2026.md  COOKBOOK.md  FULL_REFERENCE.md  HONEST_REPORT_v0.25.md  PHANTOM_API.md  PHANTOM_PROPOSAL.md  QUALITY_REPORT.md  README.md  TRAINING_DATA_PROMPT.md
docs-src/: api-reference.md  architecture.md  changelog.md  cli.md  index.md  license.md  rest-api.md
docs-src/features/: ai-detection.md  paraphrasing.md  readability.md  spinning.md  tone.md  watermarks.md
docs-src/getting-started/: installation.md  profiles.md  quickstart.md
docs-src/integrations/: django.md  fastapi.md  flask.md  wordpress.md
examples/: advanced.py  basic_usage.py  benchmark_detector.py  django_integration.py  fastapi_integration.py  flask_integration.py  new_features.py  seo_mode.py
js/: README.md  package-lock.json  package.json
js/src/: analyzer.ts  core.ts  debureaucratizer.ts  index.ts  naturalizer.ts  normalizer.ts  pipeline.ts  types.ts
js/src/lang/: en.ts  index.ts  ru.ts
js/tests/: core.test.ts  stages.test.ts
php/: .phpunit.result.cache  README.md  composer.json  phpunit.xml
php/examples/: advanced.php  basic_usage.php
php/src/: AIDetector.php  AnalysisReport.php  CoherenceAnalyzer.php  ContentSpinner.php  HumanizeOptions.php  HumanizeResult.php  LangDetector.php  Paraphraser.php  Profiles.php  RandomHelper.php  SentenceSplitter.php  TextAnalyzer.php  TextHumanize.php  ToneAnalyzer.php  WatermarkDetector.php
php/src/Lang/: De.php  En.php  Es.php  Fr.php  It.php  Pl.php  Pt.php  Registry.php  Ru.php  Uk.php
php/src/Pipeline/: ContextGuard.php  Debureaucratizer.php  LivelinessInjector.php  Pipeline.php  RepetitionReducer.php  Segmenter.php  SemanticParaphraser.php  StructureDiversifier.php  TextNaturalizer.php  TypographyNormalizer.php  UniversalProcessor.php  Validator.php
php/tests/: AIDetectorTest.php  CoherenceAnalyzerTest.php  ContentSpinnerTest.php  ParaphraserTest.php  PipelineStagesTest.php  SentenceSplitterTest.php  TextHumanizeExtraTest.php  TextHumanizeTest.php  ToneAnalyzerTest.php  WatermarkDetectorTest.php
scripts/: _gen_uk_colloc.py  _gen_uk_freq.py  _patch_uk_freq.py  _quality_check.py  bench_en_bypass.py  bench_en_bypass2.py  bench_local.py  diag_determinism.py  diag_feature_compare.py  diag_features.py  diag_guard.py  diag_guard2.py  diag_stat.py  diagnostic.py  download_training_data.py  fix_i18n.py  fix_php_watermark.py  full_diagnostic.py  gen_collocations.py  gen_massive_synonyms.py  gen_real_frequencies.py  gen_word_freq.py  gen_word_freq_10k.py  neural_features_diag.py  parse_wikt_dump.py  run_training.py  sensitivity_analysis.py  smoke_test.py  test_detection.py  test_en_bypass.py  test_fixes.py  test_human_samples.py  test_minimal_golden.py  test_oss.py  test_roundtrip.py  train_grammar_guard.py  train_on_real_data.py  train_v2_pytorch.py  validate_weights.py
tests/: conftest.py  test_adversarial.py  test_antidetect.py  test_api_wrappers.py  test_ash.py  test_async_api.py  test_audit_round2.py  test_benchmark.py  test_cli.py  test_coherence.py  test_content_guard.py  test_context.py  test_context_tone_full.py  test_core.py  test_coverage_boost.py  test_coverage_final.py  test_coverage_hardcore.py  test_coverage_push.py  test_coverage_round3.py  test_coverage_round4.py  test_coverage_round5.py  test_custom_dict.py  test_decancel.py  test_detectors.py  test_detectors_full.py  test_error_handling.py  test_final_coverage.py  test_golden.py  test_grammar.py  test_health.py  test_llm_integration.py  test_morphology.py  test_morphology_ext.py  test_multilang.py  test_naturalizer.py  test_naturalizer_full.py  test_neural.py  test_new_features.py  test_new_modules.py  test_normalizer.py  (+25 more)
texthumanize/: __init__.py  __main__.py  _colloc_data.py  _curated_synonyms.py  _human_profiles.py  _replacement_data.py  _synonym_db.py  _word_freq_data.py  adversarial_play.py  ai_backend.py  ai_markers.py  analyzer.py  antidetect.py  api.py  ash_engine.py  async_api.py  autotune.py  benchmark_suite.py  benchmarks.py  cache.py  cjk_segmenter.py  cli.py  cognitive_model.py  coherence.py  coherence_repair.py  collocation_engine.py  content_classifier.py  context.py  core.py  corpus_stats.py  dashboard.py  data_loader.py  decancel.py  detectors.py  dict_trainer.py  dictionaries.py  diff_report.py  entropy_injector.py  exceptions.py  fingerprint.py  (+59 more)
texthumanize/lang/: __init__.py  ar.py  cs.py  da.py  de.py  en.py  es.py  fr.py  he.py  hi.py  hu.py  id_.py  it.py  ja.py  ko.py  nl.py  pl.py  pt.py  ro.py  ru.py  sv.py  th.py  tr.py  uk.py  vi.py  zh.py
texthumanize/weights/: detector_v2.json  detector_weights.json.zb85  grammar_guard_weights.json  lm_weights.json.zb85
web/: app.py
wordpress/: texthumanize-wp.php
wordpress/assets/js/: texthumanize-editor.js
