[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "texthumanize"
version = "0.21.0"
description = "Algorithmic text humanization with AI detection, tone analysis, paraphrasing, and spinning — 17-stage pipeline, 14 languages, zero dependencies"
readme = "README.md"
license = {text = "Dual License — Free for personal use, commercial license required for business"}
requires-python = ">=3.9"
authors = [
    {name = "TextHumanize Contributors"}
]
keywords = [
    "text", "humanize", "nlp", "typography", "readability",
    "natural-language", "text-processing", "style",
    "multilingual", "text-naturalization",
    "ai-detection", "gpt-detector", "paraphrase", "tone-analysis",
    "watermark-detection", "content-spinner", "text-coherence",
    "morphology", "sentence-splitter",
    "russian", "ukrainian", "german", "french", "spanish",
    "polish", "portuguese", "italian"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Linguistic",
    "Natural Language :: Russian",
    "Natural Language :: Ukrainian",
    "Natural Language :: English",
    "Natural Language :: German",
    "Natural Language :: French",
    "Natural Language :: Spanish",
    "Natural Language :: Polish",
    "Natural Language :: Portuguese",
    "Natural Language :: Italian",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "hypothesis>=6.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

# Modular install extras — users can install only the parts they need:
#   pip install texthumanize[detect]      — detection only
#   pip install texthumanize[humanize]    — humanization only
#   pip install texthumanize[api]         — REST API server
#   pip install texthumanize[full]        — everything
# NOTE: The core library is zero-dependency. These extras pull in
# optional dependencies for extended functionality.
detect = []       # Detection — no extra deps (pure Python)
humanize = []     # Humanization — no extra deps (pure Python)
api = [
    "flask>=2.0",
]
full = [
    "flask>=2.0",
]

[project.scripts]
texthumanize = "texthumanize.cli:main"
texthumanize-api = "texthumanize.api:run_server"

[project.urls]
Homepage = "https://github.com/ksanyok/TextHumanize"
Documentation = "https://ksanyok.github.io/TextHumanize/"
Repository = "https://github.com/ksanyok/TextHumanize"
Issues = "https://github.com/ksanyok/TextHumanize/issues"
Changelog = "https://github.com/ksanyok/TextHumanize/blob/main/CHANGELOG.md"
Demo = "https://humanizekit.tester-buyreadysite.website/"

[tool.setuptools.packages.find]
include = ["texthumanize*"]

[tool.setuptools.package-data]
texthumanize = ["data/*.json", "weights/*.zb85"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 300

[tool.coverage.run]
omit = [
    "texthumanize/training.py",
    "texthumanize/dashboard.py",
    "scripts/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "SIM", "UP", "RUF", "PT"]
ignore = [
    "E501",   # line-too-long — managed by formatter, not lint
    "E741",   # ambiguous-variable-name — common in math/nlp code
    "UP007",  # Use X | Y for union — we support py39 which needs Optional
    "UP006",  # non-pep585-annotation — py39 compat (use list[] not List[])
    "UP045",  # non-pep604-annotation-optional — py39 compat
    "SIM108", # Use ternary — sometimes if/else is clearer
    "SIM105", # suppressible-exception — contextlib.suppress not always better
    "SIM115", # open-file-with-context-handler — sometimes impractical
    "B905",   # zip without strict — py39 compat
    "RUF001", # ambiguous-unicode-character-string — we use Cyrillic/i18n strings
    "RUF002", # ambiguous-unicode-character-docstring — Russian docstrings
    "RUF003", # ambiguous-unicode-character-comment — Russian comments
    "RUF012", # Mutable class-var without ClassVar — too noisy
    "RUF059", # unused-unpacked-variable — sometimes needed for API shape
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "E402",   # module-level imports — tests often import after setup
    "B011",   # assert False — used in tests
    "PT009",  # pytest-unittest-assertion — progressive migration from unittest to pytest
    "PT006",  # pytest-parametrize-names-wrong-type — cosmetic
    "PT011",  # pytest-raises-too-broad — progressive adoption
    "PT012",  # pytest-raises-with-multiple-statements — acceptable in tests
    "PT027",  # pytest-unittest-raises-assertion — progressive migration
    "SIM117", # multiple-with-statements — sometimes more readable nested
    "RUF043", # pytest-raises-ambiguous-pattern
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
